--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
     "libsodium-wrappers": "^0.7.10",
+    "nodemailer": "^6.9.1",
     "tmi.js": "^1.8.5"
   }
 }
