--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.14.0",
+    "axios": "^1.5.1",
     "canvas": "^2.10.2",
     "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
