--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "canvas": "^2.10.2",
     "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "libsodium-wrappers": "^0.7.10",
     "nodemailer": "^6.9.1",
+    "spotify-web-api-node": "^5.0.2",
     "tmi.js": "^1.8.5"
   }
 }
