--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@discordjs/voice": "^0.14.0",
     "axios": "^1.5.1",
     "canvas": "^2.10.2",
+    "chalk": "^4.1.2",
     "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
